<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favorites"
       />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/search_icon"
        android:title="@string/search"
        />

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/bt_signOut"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>