<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_createLoginDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="32dp"
    android:orientation="vertical"
    style="@style/DialogTheme">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
    <ImageView
        android:id="@+id/iv_gitLogo"
        android:layout_width="191dp"
        android:layout_height="201dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/git_hub_logo" />

    <TextView
        android:id="@+id/tv_createYourLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/createYourLogin"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_gitLogo" />

    <EditText
        android:id="@+id/et_newUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textPersonName"
        android:hint="@string/enterWithGithubUsername"
        android:textColor="@color/light_grey"
        android:textColorHint="@color/light_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_createYourLogin" />

    <EditText
        android:id="@+id/et_newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textColorHint="@color/light_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newUsername" />

    <EditText
        android:id="@+id/et_confirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:textColor="@color/grey"
        android:textColorHint="@color/light_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_newPassword" />

        <Button
            android:id="@+id/bt_createLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create"
            android:textSize="15sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_confirmNewPassword"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>